project(WIL LANGUAGES CXX)

file(GLOB_RECURSE CXX_SOURCE_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} CONFIGURE_DEPENDS ${CPP_FILES_EXT})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${CPP_SOURCE_FILES})

add_library(${PROJECT_NAME} STATIC ${CXX_SOURCE_FILES})
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
